tablebet: rename dir and switch left right  chip position supertwild and tie

--- a/src/game/components/TableBet/table-bet-portrait.module.scss
+++ b/src/game/components/TableBet/table-bet-portrait.module.scss
@@ -1,36 +1,43 @@
 @use 'sass:math';
 
-$maxY: -30%;
-// $domainHeight: 32vh;
+$maxY: -20%;
+// $domainHeight: 32vw;
 $domainHeight: 33vw;
-$transformOpen: translate(0%, 0%) scale(0.8);
-$transformClose: translate(0%, 0%) scale(0.75, 0.75) perspective(1000px) rotateX(30deg);;
+$scaleOpen: 0.99;
+$transformOpen: translate(0%, 0%) scale($scaleOpen);
+$transformClose: translate(0%, 0%) scale(1);
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
-$childBetM23Width : calc(98.5%/2);
+$childBetM23Width : calc(98%/2);
 
 .tableBet {
-    width: calc(100% - 0.5rem);
+    // transform: translate(0, 0%);
+    // transform-origin: 100% 100%;
+
+    height: calc(100% - 1rem);
+    // width: calc(100% - 0.5rem);
+
+
     border-radius: 1rem;
-    $anim-duration: 0.3s;
+    // backdrop-filter: blur(0.6rem);
+
+    $anim-duration: 0s;
     display: flex;
-    flex-direction: column;
-    z-index: 1;
-    height: fit-content;
+    flex-direction: column-reverse;
 
     &.open {
         transform: $transformOpen;
         animation: openTable;
         animation-duration: $anim-duration;
-        // bottom: -60%;
-
     }
 
     &.close {
+        // transform: $transformClose;
+        // animation: closeTable;
+        // animation-duration: $anim-duration;
         transform: $transformClose;
-        animation: closeTable;
+        animation: openTable;
         animation-duration: $anim-duration;
-        opacity: 1;
     }
 
     &.closeZoom {
@@ -42,13 +49,11 @@ $childBetM23Width : calc(98.5%/2);
 
 .table {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     flex-direction: column;
-    height: fit-content;
-    transform: translateY(1rem);
+    height: 100%;
+    transform: translateY(2rem);
 }
-
-
 
 .container {
 
@@ -72,43 +77,42 @@ $childBetM23Width : calc(98.5%/2);
 
 .buttonMore {
     float: right;
-    margin: 1.5vh 0.5vh;
+    margin: 1.5vw 0.5vw;
     display: flex;
-    width: 16vh;
-    height: 5vh;
+    width: 16vw;
+    height: 5vw;
 
     &>svg {
         position: absolute;
-        width: 16vh;
-        height: 5vh;
-        right: 3vh;
+        width: 16vw;
+        height: 5vw;
+        right: 3vw;
     }
 }
 
 .buttonMoreContent {
     float: right;
-    margin: 1.5vh 0.5vh;
+    margin: 1.5vw 0.5vw;
     display: flex;
-    padding-left: 1vh;
-    padding-right: 2vh;
-    width: 16vh;
-    height: 5vh;
+    padding-left: 1vw;
+    padding-right: 2vw;
+    width: 16vw;
+    height: 5vw;
     justify-content: space-between;
     position: absolute;
-    right: 2vh;
+    right: 2vw;
 
     svg {
-        // width: 5vh;
-        // height: 5vh;
-
-        margin-top: -1.5vh;
-        // margin-right: 1.5vh;
+        // width: 5vw;
+        // height: 5vw;
+        margin-top: -1.5vw;
+        // margin-right: 1.5vw;
 
     }
 
-    // padding-left: 2.5vh;
-    // padding-top: 2vh;
-    font-size: 1.5vh;
+    // padding-left: 2.5vw;
+    // padding-top: 2vw;
+    font-size: 1.5vw;
 
     // left: 50%;
     // top: 50%;
@@ -141,10 +145,6 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-
-
-
-
 .slot-chip {
     $percentChip: 70;
 
@@ -153,9 +153,8 @@ $childBetM23Width : calc(98.5%/2);
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-inline: -2%;
-    // margin-top: 3%;
-
+    margin-inline: 5%;
+    margin-top: 3%;
     transform: translate(-50%, -50%) scale(0.6);
 
 }
@@ -184,7 +183,6 @@ $childBetM23Width : calc(98.5%/2);
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
 
-    svg {}
 }
 
 
@@ -194,38 +192,34 @@ $childBetM23Width : calc(98.5%/2);
     text-align: center;
     // margin-top: -4%;
     margin-top: -4.5%;
-    z-index: 2;
 }
 
 .domainContent {
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
     position: absolute;
-    padding-inline: 2rem 1rem;
+    padding-inline: 1rem 1rem;
     padding-block: 0.5rem;
-    height: 55%;
+    height: 9rem;
 
     &>div:nth-child(1) {
         margin-top: 0 !important;
     }
 }
+
 .domainContent:nth-child(2) {
-    padding-right: 1rem;
+    padding-right: 0rem;
 
 }
 
-
-.betButtonLabel {
-    font-size: 1rem;
-}
 
 .domainLabel {
     display: flex;
     width: 100%;
-    height: 55%;
+    height: 65%;
     justify-content: flex-end;
     flex-direction: column;
-    margin-top: 6%;
+    margin-top: 6vw;
     position: absolute;
     bottom: 0;
     font-style: normal;
@@ -233,24 +227,27 @@ $childBetM23Width : calc(98.5%/2);
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
+
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
         opacity: 1;
+
     }
 
     span {
         opacity: 0.75;
+        text-transform: uppercase;
     }
 }
 
 .tieLabel {
-    text-transform: uppercase;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
+
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
@@ -260,50 +257,62 @@ $childBetM23Width : calc(98.5%/2);
 
     span {
         opacity: 0.75;
+        text-transform: uppercase;
     }
+
 }
 
 .domainContentTie {
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
     position: absolute;
-    padding-inline: 0.25rem;
-    padding-block: 0.25rem;
+    padding-inline: 0.5rem;
+    padding-block: 0.5rem;
     text-align: center;
     justify-content: center;
     display: flex;
     margin-top: 2%;
-    z-index: 1;
-    height: 3rem;
-    padding-left: 1.5rem;
+    z-index: 3;
+    height: 16vw;
+    padding-left: 5vw;
 
-    &>div {
-        margin-top: 10%;
-        margin-left: 5%;
-    }
+
 }
 
+.cardContainerDragon {
+
+    position: absolute;
+    top: -25px;
+    right: 25px;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+}
+
+.cardContainerTiger {
+    position: absolute;
+    top: -25px;
+    left: 35px;
+    right: auto;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+}
+
+.cardContainerWild {
+    position: absolute;
+    bottom: 30.5rem;
+    top: -35%;
+    right: auto;
+    left: 47.5%;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+    // height: 100%;
+}
 
 
 
 .childContainer,
 .childContainerBottom {
-
-    // background: linear-gradient(
-    //     90deg,
-    //     rgba(22, 77, 62, 0.5) 0%,
-    //     rgba(0, 71, 53, 0.5) 99.96%
-    // );
-    // border: 0.1rem solid #166458;
-    // border-radius: 0.7rem;
-
-    // height: 50%;
     width: 100%;
-    // padding: 1rem;
-    // padding-top: 0.25rem;
-    // padding-bottom: 0.2rem;
-    // justify-content: space-between;
-    // align-items: center;
     flex-direction: row;
     display: flex;
     justify-content: space-between;
@@ -318,14 +327,7 @@ $childBetM23Width : calc(98.5%/2);
 }
 
 .childContainer {
-    margin-top: -4.5%;
-    // width: 103%;
-    padding-top: 0.2rem;
-
-}
-
-.childContainerBottom {
-    margin-top: -3.5%;
+    margin-top: -1.5rem;
     // width: 103%;
 
 }
@@ -334,10 +336,14 @@ $childBetM23Width : calc(98.5%/2);
 .child {
     width: $childBetM23Width;
     margin: 0 calc(0.5%/4);
-    display: flex;
+    height: fit-content;
+
     svg {
-        transform: scaleY(-1);
+        z-index: 0;
+
         // position: absolute;
+        transform: scaleY(-1);
+
     }
 
 
@@ -348,21 +354,13 @@ $childBetM23Width : calc(98.5%/2);
         // padding-inline: 1.5rem;
 
         flex-direction: row-reverse;
+        padding-right: 0rem;
+
+        span {
 
 
-        &>span {
             &>div {
-                margin-left: -0.75rem;
-            }
-        }
-    }
-}
-
-.child:nth-child(odd) {
-    .childLabel {
-        &>span {
-            &>div {
-                margin-left: 1rem;
+                margin-left: 3% !important;
             }
         }
     }
@@ -375,15 +373,17 @@ $childBetM23Width : calc(98.5%/2);
     // justify-content: space-between;
     padding-inline: 1rem;
     // padding-left: 1rem;
-    height: 2rem;
+    height: 8vw;
     align-items: center;
     align-self: center;
+    // justify-content: space-between;
     z-index: 1;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
+
     &>span.text_lg {
         opacity: 1;
     }
@@ -392,47 +392,14 @@ $childBetM23Width : calc(98.5%/2);
         opacity: 0.75;
         padding-left: 0.5rem;
         padding-right: 1.5rem;
+        padding-top: 1rem;
         text-transform: uppercase;
     }
 
 
+
 }
 
-.cardContainerDragon {
-    position: absolute;
-    bottom: 9rem;
-    right: auto;
-    left: 50%;
-    transform: perspective(1000px) translate(-5px, 15px);
-    width: 24%;
-    height: 31.68%;
-}
-
-.cardContainerTiger {
-    position: absolute;
-    bottom: 9rem;
-    left: auto;
-    right: 35%;
-    transform: perspective(1000px) translate(-5px, 15px);
-    width: 24%;
-    height: 31.68%;
-}
-
-.cardContainerWild {
-    position: absolute;
-    top: -20%;
-    // top: -135%;
-    // bottom: 17rem;
-
-    left: 47.5%;
-    margin: auto;
-    // right: auto;
-    // left: -4rem;
-    transform: perspective(1000px) translate(-5px, 15px);
-    // transform-origin: -250% -50%;
-    width: 24%;
-    height: 31.68%;
-}
 
 @keyframes chipLight {
     0% {
@@ -490,27 +457,7 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-@keyframes upAndDown {
-    0% {
-        transform: translate(-50%, -0.8rem);
-    }
 
-    25% {
-        transform: translate(-50%, -1.6rem);
-    }
-
-    50% {
-        transform: translate(-50%, -0.8rem);
-    }
-
-    75% {
-        transform: translate(-50%, -1.6rem);
-    }
-
-    100% {
-        transform: translate(-50%, -0.8rem);
-    }
-}
 
 @keyframes closeTable {
     from {
@@ -542,32 +489,88 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-.result-number-slide-right {
-    animation: slideRight 0.5s forwards;
-    // animation-delay: 2s;
+
+
+.card-slot {
+    animation: cardpush 0.65s linear forwards;
 }
 
-@keyframes slideRight {
+.card-slot.disappear {
+    animation: cardpull 0.65s linear forwards;
+}
+
+@keyframes cardpush {
     0% {
-        transform: translate(-50%, 0);
+        transform: translate(0px, 0px);
+        opacity: 0;
+    }
+
+    55% {
+        opacity: 1;
+    }
+
+    65% {
+        transform: translate(0px, 120%);
     }
 
     100% {
-        transform: translate(0%, 0);
+        transform: translate(0px, 120%);
     }
 }
 
-.result-number-slide-left {
-    animation: slideLeft 0.5s forwards;
-    // animation-delay: 2s;
-}
-
-@keyframes slideLeft {
+@keyframes cardpull {
     0% {
-        transform: translate(50%, 0);
+        transform: translate(0px, 120%);
+        opacity: 1;
+    }
+
+    55% {
+        opacity: 0;
+    }
+
+    65% {
+        opacity: 0;
+        transform: translate(0px, 0px);
     }
 
     100% {
-        transform: translate(0%, 0);
+        opacity: 0;
+        transform: translate(0px, 0px);
+    }
+}
+
+.card-core {
+    animation: flipdown 0.65s linear both;
+}
+
+.card-core.flipup {
+    animation: flipup 0.65s linear both;
+}
+
+@keyframes flipup {
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    45% {
+        transform: rotateY(180deg);
+    }
+
+    100% {
+        transform: rotateY(180deg);
+    }
+}
+
+@keyframes flipdown {
+    0% {
+        transform: rotateY(180deg);
+    }
+
+    45% {
+        transform: rotateY(0deg);
+    }
+
+    100% {
+        transform: rotateY(0deg);
     }
 }
