--- a/src/game/components/TableBet/table-bet-landscape.module.scss
+++ b/src/game/components/TableBet/table-bet-landscape.module.scss
@@ -1,43 +1,36 @@
 @use 'sass:math';
 
-$maxY: -20%;
-// $domainHeight: 32vw;
+$maxY: -30%;
+// $domainHeight: 32vh;
 $domainHeight: 33vw;
-$scaleOpen: 0.99;
-$transformOpen: translate(0%, 0%) scale($scaleOpen);
-$transformClose: translate(0%, 0%) scale(1);
+$transformOpen: translate(0%, 0%) scale(0.8);
+$transformClose: translate(0%, 0%) scale(0.75, 0.75) perspective(1000px) rotateX(30deg);;
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
-$childBetM23Width : calc(98%/2);
+$childBetM23Width : calc(98.5%/2);
 
 .tableBet {
-    // transform: translate(0, 0%);
-    // transform-origin: 100% 100%;
-
-    height: calc(100% - 1rem);
-    // width: calc(100% - 0.5rem);
-
-
+    width: calc(100% - 0.5rem);
     border-radius: 1rem;
-    // backdrop-filter: blur(0.6rem);
-
-    $anim-duration: 0s;
+    $anim-duration: 0.3s;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    z-index: 1;
+    height: fit-content;
 
     &.open {
         transform: $transformOpen;
         animation: openTable;
         animation-duration: $anim-duration;
+        // bottom: -60%;
+
     }
 
     &.close {
-        // transform: $transformClose;
-        // animation: closeTable;
-        // animation-duration: $anim-duration;
         transform: $transformClose;
-        animation: openTable;
+        animation: closeTable;
         animation-duration: $anim-duration;
+        opacity: 1;
     }
 
     &.closeZoom {
@@ -49,11 +42,13 @@ $childBetM23Width : calc(98%/2);
 
 .table {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
-    height: 100%;
-    transform: translateY(2rem);
+    height: fit-content;
+    transform: translateY(1rem);
 }
+
+
 
 .container {
 
@@ -77,42 +72,43 @@ $childBetM23Width : calc(98%/2);
 
 .buttonMore {
     float: right;
-    margin: 1.5vw 0.5vw;
+    margin: 1.5vh 0.5vh;
     display: flex;
-    width: 16vw;
-    height: 5vw;
+    width: 16vh;
+    height: 5vh;
 
     &>svg {
         position: absolute;
-        width: 16vw;
-        height: 5vw;
-        right: 3vw;
+        width: 16vh;
+        height: 5vh;
+        right: 3vh;
     }
 }
 
 .buttonMoreContent {
     float: right;
-    margin: 1.5vw 0.5vw;
+    margin: 1.5vh 0.5vh;
     display: flex;
-    padding-left: 1vw;
-    padding-right: 2vw;
-    width: 16vw;
-    height: 5vw;
+    padding-left: 1vh;
+    padding-right: 2vh;
+    width: 16vh;
+    height: 5vh;
     justify-content: space-between;
     position: absolute;
-    right: 2vw;
+    right: 2vh;
 
     svg {
-        // width: 5vw;
-        // height: 5vw;
-        margin-top: -1.5vw;
-        // margin-right: 1.5vw;
+        // width: 5vh;
+        // height: 5vh;
+
+        margin-top: -1.5vh;
+        // margin-right: 1.5vh;
 
     }
 
-    // padding-left: 2.5vw;
-    // padding-top: 2vw;
-    font-size: 1.5vw;
+    // padding-left: 2.5vh;
+    // padding-top: 2vh;
+    font-size: 1.5vh;
 
     // left: 50%;
     // top: 50%;
@@ -145,6 +141,10 @@ $childBetM23Width : calc(98%/2);
     }
 }
 
+
+
+
+
 .slot-chip {
     $percentChip: 70;
 
@@ -153,8 +153,9 @@ $childBetM23Width : calc(98%/2);
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-inline: 5%;
-    margin-top: 3%;
+    margin-inline: -2%;
+    // margin-top: 3%;
+
     transform: translate(-50%, -50%) scale(0.6);
 
 }
@@ -183,6 +184,7 @@ $childBetM23Width : calc(98%/2);
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
 
+    svg {}
 }
 
 
@@ -192,34 +194,38 @@ $childBetM23Width : calc(98%/2);
     text-align: center;
     // margin-top: -4%;
     margin-top: -4.5%;
+    z-index: 2;
 }
 
 .domainContent {
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
     position: absolute;
-    padding-inline: 1rem 1rem;
+    padding-inline: 2rem 1rem;
     padding-block: 0.5rem;
-    height: 9rem;
+    height: 55%;
 
     &>div:nth-child(1) {
         margin-top: 0 !important;
     }
 }
-
 .domainContent:nth-child(2) {
-    padding-right: 0rem;
+    padding-right: 1rem;
 
 }
 
 
+.betButtonLabel {
+    font-size: 1rem;
+}
+
 .domainLabel {
     display: flex;
     width: 100%;
-    height: 65%;
+    height: 55%;
     justify-content: flex-end;
     flex-direction: column;
-    margin-top: 6vw;
+    margin-top: 6%;
     position: absolute;
     bottom: 0;
     font-style: normal;
@@ -227,27 +233,24 @@ $childBetM23Width : calc(98%/2);
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
-
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
         opacity: 1;
-
     }
 
     span {
         opacity: 0.75;
-        text-transform: uppercase;
     }
 }
 
 .tieLabel {
+    text-transform: uppercase;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
-
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
@@ -257,58 +260,29 @@ $childBetM23Width : calc(98%/2);
 
     span {
         opacity: 0.75;
-        text-transform: uppercase;
     }
-
 }
 
 .domainContentTie {
     width: calc(99.5%/3);
     margin: 0 calc(0.5%/3);
     position: absolute;
-    padding-inline: 0.5rem;
-    padding-block: 0.5rem;
+    padding-inline: 0.25rem;
+    padding-block: 0.25rem;
     text-align: center;
     justify-content: center;
     display: flex;
     margin-top: 2%;
-    z-index: 3;
-    height: 16vw;
-    padding-left: 5vw;
+    z-index: 1;
+    height: 3rem;
+    padding-left: 1.5rem;
 
-
+    &>div {
+        margin-top: 10%;
+        margin-left: 5%;
+    }
 }
 
-.cardContainerDragon {
-
-    position: absolute;
-    top: -25px;
-    right: auto;
-    left: 55px;
-    transform: perspective(1000px) translate(-5px, 15px);
-    width: 24%;
-    // height: 31.68px;
-}
-
-.cardContainerTiger {
-    position: absolute;
-    top: -25px;
-    left: 55px;
-    right: auto;
-    transform: perspective(1000px) translate(-5px, 15px);
-    width: 24%;
-    // height: 31.68px;
-}
-
-.cardContainerWild {
-    position: absolute;
-    bottom: 17rem;
-    right: auto;
-    left: 47.5%;
-    transform: perspective(1000px) translate(-5px, 15px);
-    width: 24%;
-    // height: 31.68px;
-}
 
 
 
@@ -344,7 +318,14 @@ $childBetM23Width : calc(98%/2);
 }
 
 .childContainer {
-    margin-top: -1.5rem;
+    margin-top: -4.5%;
+    // width: 103%;
+    padding-top: 0.2rem;
+
+}
+
+.childContainerBottom {
+    margin-top: -3.5%;
     // width: 103%;
 
 }
@@ -353,14 +334,10 @@ $childBetM23Width : calc(98%/2);
 .child {
     width: $childBetM23Width;
     margin: 0 calc(0.5%/4);
-    height: fit-content;
-
+    display: flex;
     svg {
-        z-index: 0;
-
-        // position: absolute;
         transform: scaleY(-1);
-
+        // position: absolute;
     }
 
 
@@ -371,13 +348,21 @@ $childBetM23Width : calc(98%/2);
         // padding-inline: 1.5rem;
 
         flex-direction: row-reverse;
-        padding-right: 0rem;
-
-        span {
 
 
+        &>span {
             &>div {
-                margin-left: 3% !important;
+                margin-left: -0.75rem;
+            }
+        }
+    }
+}
+
+.child:nth-child(odd) {
+    .childLabel {
+        &>span {
+            &>div {
+                margin-left: 1rem;
             }
         }
     }
@@ -390,17 +375,15 @@ $childBetM23Width : calc(98%/2);
     // justify-content: space-between;
     padding-inline: 1rem;
     // padding-left: 1rem;
-    height: 8vw;
+    height: 2rem;
     align-items: center;
     align-self: center;
-    // justify-content: space-between;
     z-index: 1;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
     letter-spacing: 0.09px;
     text-transform: uppercase;
-
     &>span.text_lg {
         opacity: 1;
     }
@@ -409,14 +392,41 @@ $childBetM23Width : calc(98%/2);
         opacity: 0.75;
         padding-left: 0.5rem;
         padding-right: 1.5rem;
-        padding-top: 1rem;
         text-transform: uppercase;
     }
 
 
-
 }
 
+.cardContainerDragon {
+    position: absolute;
+    bottom: 9rem;
+    right: auto;
+    left: 50%;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+    height: 31.68%;
+}
+
+.cardContainerTiger {
+    position: absolute;
+    bottom: 9rem;
+    left: auto;
+    right: 35%;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+    height: 31.68%;
+}
+
+.cardContainerWild {
+    position: absolute;
+    bottom: 30.5rem;
+    top: -120%;
+    right: auto;
+    left: 43.5%;
+    transform: perspective(1000px) translate(-5px, 15px);
+    width: 24%;
+}
 
 @keyframes chipLight {
     0% {
@@ -474,7 +484,27 @@ $childBetM23Width : calc(98%/2);
     }
 }
 
+@keyframes upAndDown {
+    0% {
+        transform: translate(-50%, -0.8rem);
+    }
 
+    25% {
+        transform: translate(-50%, -1.6rem);
+    }
+
+    50% {
+        transform: translate(-50%, -0.8rem);
+    }
+
+    75% {
+        transform: translate(-50%, -1.6rem);
+    }
+
+    100% {
+        transform: translate(-50%, -0.8rem);
+    }
+}
 
 @keyframes closeTable {
     from {
@@ -506,88 +536,32 @@ $childBetM23Width : calc(98%/2);
     }
 }
 
-
-
-.card-slot {
-    animation: cardpush 0.65s linear forwards;
+.result-number-slide-right {
+    animation: slideRight 0.5s forwards;
+    // animation-delay: 2s;
 }
 
-.card-slot.disappear {
-    animation: cardpull 0.65s linear forwards;
-}
-
-@keyframes cardpush {
+@keyframes slideRight {
     0% {
-        transform: translate(0px, 0px);
-        opacity: 0;
-    }
-
-    55% {
-        opacity: 1;
-    }
-
-    65% {
-        transform: translate(0px, 120%);
+        transform: translate(-50%, 0);
     }
 
     100% {
-        transform: translate(0px, 120%);
+        transform: translate(0%, 0);
     }
 }
 
-@keyframes cardpull {
+.result-number-slide-left {
+    animation: slideLeft 0.5s forwards;
+    // animation-delay: 2s;
+}
+
+@keyframes slideLeft {
     0% {
-        transform: translate(0px, 120%);
-        opacity: 1;
-    }
-
-    55% {
-        opacity: 0;
-    }
-
-    65% {
-        opacity: 0;
-        transform: translate(0px, 0px);
+        transform: translate(50%, 0);
     }
 
     100% {
-        opacity: 0;
-        transform: translate(0px, 0px);
-    }
-}
-
-.card-core {
-    animation: flipdown 0.65s linear both;
-}
-
-.card-core.flipup {
-    animation: flipup 0.65s linear both;
-}
-
-@keyframes flipup {
-    0% {
-        transform: rotateY(0deg);
-    }
-
-    45% {
-        transform: rotateY(180deg);
-    }
-
-    100% {
-        transform: rotateY(180deg);
-    }
-}
-
-@keyframes flipdown {
-    0% {
-        transform: rotateY(180deg);
-    }
-
-    45% {
-        transform: rotateY(0deg);
-    }
-
-    100% {
-        transform: rotateY(0deg);
+        transform: translate(0%, 0);
     }
 }
