--- a/src/game/components/TableBet/table-bet-landscape.module.scss
+++ b/src/game/components/TableBet/table-bet-landscape.module.scss
@@ -4,7 +4,7 @@ $maxY: -30%;
 // $domainHeight: 32vh;
 $domainHeight: 33vw;
 $transformOpen: translate(0%, 0%) scale(0.8);
-$transformClose: translate(0%, 0%) scale(0.75, 0.75) perspective(1000px) rotateX(30deg);;
+$transformClose: translate(0%, 15%) scale(0.75, 0.75) perspective(1000px) rotateX(30deg);
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
 $childBetM23Width : calc(98.5%/2);
