fix bug in footer

--- a/src/common/components/Footer/styles.module.scss
+++ b/src/common/components/Footer/styles.module.scss
@@ -4,5 +4,18 @@
     background: var(--bg-footer);
 
     display: flex;
-    gap: var(--width-total-bet);
+    // gap: var(--width-total-bet);
+}
+
+.mobile-portrait {
+    &.footer {
+        justify-content: space-between;
+    }
+}
+
+.desktop,
+.mobile-landscape {
+    &.footer {
+        gap: var(--width-total-bet);
+    }
 }
