--- a/src/common/components/UserInfo/styles.module.scss
+++ b/src/common/components/UserInfo/styles.module.scss
@@ -1,19 +1,21 @@
 .user-info {
-    flex: 1;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
+
     gap: 0.2rem;
 
     &.right {
+        padding-right: 0.8rem;
         align-items: flex-end;
 
         .label-wrapper {
             justify-content: flex-end;
         }
+    }
+
+    &.left {
+        padding-left: 0.8rem;
     }
 }
 
@@ -49,4 +51,18 @@
     font-size: 1.1rem;
     font-weight: 600;
     letter-spacing: -0.02rem;
+}
+
+.mobile-portrait {
+    &.user-info {
+        flex-shrink: 0;
+        width: calc((36rem - var(--width-total-bet)) * 50 / 100 + 1.5rem);
+    }
+}
+
+.desktop,
+.mobile-landscape {
+    &.user-info {
+        flex: 1;
+    }
 }
