--- a/src/common/components/ChipBet/styles.module.scss
+++ b/src/common/components/ChipBet/styles.module.scss
@@ -1,6 +1,9 @@
 .chip {
     --opacity: 1;
 
+    width: 100%;
+    height: 100%;
+
     position: relative;
     border-radius: 9999px;
     overflow: hidden;
