--- a/src/common/components/ChipBet/styles.module.scss
+++ b/src/common/components/ChipBet/styles.module.scss
@@ -3,9 +3,10 @@
 
     width: 100%;
     height: 100%;
+    border-radius: 9999px;
 
     position: relative;
-    border-radius: 9999px;
+
     overflow: hidden;
     opacity: var(--opacity);
     transition: opacity 0.4s linear;
@@ -17,72 +18,25 @@
     }
 }
 
-.chip > svg {
-    position: absolute;
-    top: 0;
-    left: 0;
+.bg {
     width: 100%;
     height: 100%;
-    padding: 0;
 }
 
-.chip-light {
+.text {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 
-    width: 90%;
-    height: 90%;
+    font-size: 0.3em;
+    font-weight: 800;
+    white-space: nowrap;
+    letter-spacing: -0.05em;
 
-    background: linear-gradient(
-        135deg,
-        transparent 0%,
-        transparent 40%,
-        rgba(255, 255, 255, 0.45) 40%,
-        rgba(255, 255, 255, 0.45) 50%,
-        transparent 50%,
-        transparent 56%,
-        rgba(255, 255, 255, 0.45) 56%,
-        rgba(255, 255, 255, 0.45) 62%,
-        transparent 62%,
-        transparent 100%
-    );
-    background-size: 200% 100%;
-    background-position: 0% 50%;
-    opacity: 0;
-    border-radius: 9999px;
-
-    &.run-chip-light {
-        animation: chip-light-animation 0.6s linear 2;
-    }
-}
-
-@keyframes chip-light-animation {
-    0% {
-        background-position: 100% 50%;
-        opacity: 1;
-    }
-    80% {
-        background-position: 0% 50%;
-        opacity: 1;
-    }
-    81% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes place-chip-animation {
-    0% {
-        opacity: 0;
-        transform: scale(0.85) translateY(-1rem);
-    }
-    100% {
-        opacity: var(--opacity);
-        transform: scale(1) translateY(0);
-    }
+    text-shadow:
+        0.01rem 0.01rem 0.1rem rgba(0, 0, 0, 0.5),
+        -0.01rem -0.01rem 0.1rem rgba(0, 0, 0, 0.5);
 }
