--- a/src/game/components/TableBet/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/styles.module.scss
@@ -66,10 +66,11 @@
     pointer-events: none;
 
     position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mobile-portrait {
@@ -82,7 +83,7 @@
 
 .desktop,
 .mobile-landscape {
-    .slot-chip {
+    .slot-chipx {
         width: calc(100cqh / 7 * 65 / 100);
         height: calc(100cqh / 7 * 65 / 100);
         font-size: calc(100cqh / 7 * 65 / 100);
