--- a/src/game/components/TableBet/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/styles.module.scss
@@ -61,13 +61,14 @@
 }
 
 .slot-chip {
-    $percentChip: 70;
-
     pointer-events: none;
 
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
