--- a/src/game/components/TableBet/ButtonBet/position.scss
+++ b/src/game/components/TableBet/ButtonBet/position.scss
@@ -1,124 +1,122 @@
 @use 'sass:math';
 
 @mixin button-bet-position {
-    .button-bet {
-        @for $i from 1 through 24 {
-            &.slot-n-#{$i} {
-                @if $i % 4 == 1 {
-                    grid-row: 2;
-                } @else if $i % 4 == 2 {
-                    grid-row: 3;
-                } @else if $i % 4 == 3 {
-                    grid-row: 4;
-                } @else {
-                    grid-row: 5;
-                }
-
-                grid-column: #{(ceil(math.div($i, 4)) - 1) * 5 + 6} / span 5;
+    @for $i from 1 through 24 {
+        .slot-n-#{$i} {
+            @if $i % 4 == 1 {
+                grid-row: 2;
+            } @else if $i % 4 == 2 {
+                grid-row: 3;
+            } @else if $i % 4 == 3 {
+                grid-row: 4;
+            } @else {
+                grid-row: 5;
             }
-        }
 
-        @for $i from 1 through 6 {
-            &.slot-c-#{$i} {
-                grid-row: 1;
-                grid-column: #{($i - 1) * 5 + 6} / span 5;
-            }
+            grid-column: #{(ceil(math.div($i, 4)) - 1) * 5 + 6} / span 5;
         }
+    }
 
-        @for $i from 1 through 4 {
-            &.slot-r-#{$i} {
-                grid-column: 1 / span 5;
-                grid-row: #{$i + 1};
-            }
-        }
-
-        &.slot-r-1-2 {
-            grid-column: 36 / span 5;
-            grid-row: 2 / span 2;
-        }
-
-        &.slot-r-3-4 {
-            grid-column: 36 / span 5;
-            grid-row: 4 / span 2;
-        }
-
-        @for $i from 1 through 5 {
-            &.slot-c-#{$i}-#{$i + 1} {
-                grid-row: 6;
-                grid-column: #{($i - 1) * 8 + 1} / span 8;
-            }
-        }
-
-        &.slot-small {
+    @for $i from 1 through 6 {
+        .slot-c-#{$i} {
             grid-row: 1;
+            grid-column: #{($i - 1) * 5 + 6} / span 5;
+        }
+    }
+
+    @for $i from 1 through 4 {
+        .slot-r-#{$i} {
             grid-column: 1 / span 5;
+            grid-row: #{$i + 1};
         }
+    }
 
-        &.slot-big {
-            grid-row: 1;
-            grid-column: 36 / span 5;
+    .slot-r-1-2 {
+        grid-column: 36 / span 5;
+        grid-row: 2 / span 2;
+    }
+
+    .slot-r-3-4 {
+        grid-column: 36 / span 5;
+        grid-row: 4 / span 2;
+    }
+
+    @for $i from 1 through 5 {
+        .slot-c-#{$i}-#{$i + 1} {
+            grid-row: 6;
+            grid-column: #{($i - 1) * 8 + 1} / span 8;
         }
+    }
 
-        &.slot-odd {
-            grid-row: 7;
-            grid-column: 1 / span 10;
-        }
+    .slot-small {
+        grid-row: 1;
+        grid-column: 1 / span 5;
+    }
 
-        &.slot-even {
-            grid-row: 7;
-            grid-column: 11 / span 10;
-        }
+    .slot-big {
+        grid-row: 1;
+        grid-column: 36 / span 5;
+    }
 
-        &.slot-red {
-            grid-row: 7;
-            grid-column: 21 / span 10;
-        }
+    .slot-odd {
+        grid-row: 7;
+        grid-column: 1 / span 10;
+    }
 
-        &.slot-black {
-            grid-row: 7;
-            grid-column: 31 / span 10;
-        }
+    .slot-even {
+        grid-row: 7;
+        grid-column: 11 / span 10;
+    }
 
-        $size-multi-bet: 0.55rem;
+    .slot-red {
+        grid-row: 7;
+        grid-column: 21 / span 10;
+    }
 
-        @for $row from 1 through 4 {
-            @for $col from 1 through 5 {
-                &.slot-h-#{$row}-#{$col} {
-                    width: $size-multi-bet;
-                    max-width: $size-multi-bet;
-                    z-index: 4;
+    .slot-black {
+        grid-row: 7;
+        grid-column: 31 / span 10;
+    }
 
-                    grid-row: #{$row + 1};
-                    grid-column: #{($col - 1) * 5 + 6} / span 10;
-                }
+    $size-multi-bet: 0.55rem;
+
+    @for $row from 1 through 4 {
+        @for $col from 1 through 5 {
+            .slot-h-#{$row}-#{$col} {
+                width: $size-multi-bet;
+                max-width: $size-multi-bet;
+                z-index: 4;
+
+                grid-row: #{$row + 1};
+                grid-column: #{($col - 1) * 5 + 6} / span 10;
             }
         }
+    }
 
-        @for $row from 1 through 3 {
-            @for $col from 1 through 6 {
-                &.slot-v-#{$row}-#{$col} {
-                    height: $size-multi-bet;
-                    max-height: $size-multi-bet;
-                    z-index: 5;
+    @for $row from 1 through 3 {
+        @for $col from 1 through 6 {
+            .slot-v-#{$row}-#{$col} {
+                height: $size-multi-bet;
+                max-height: $size-multi-bet;
+                z-index: 5;
 
-                    grid-row: #{$row + 1} / span 2;
-                    grid-column: #{($col - 1) * 5 + 6} / span 5;
-                }
+                grid-row: #{$row + 1} / span 2;
+                grid-column: #{($col - 1) * 5 + 6} / span 5;
             }
         }
+    }
 
-        @for $row from 1 through 3 {
-            @for $col from 1 through 5 {
-                &.slot-v-h-#{$row}-#{$col} {
-                    width: $size-multi-bet;
-                    max-width: $size-multi-bet;
-                    height: $size-multi-bet;
-                    max-height: $size-multi-bet;
-                    z-index: 6;
+    @for $row from 1 through 3 {
+        @for $col from 1 through 5 {
+            .slot-v-h-#{$row}-#{$col} {
+                width: $size-multi-bet;
+                max-width: $size-multi-bet;
+                height: $size-multi-bet;
+                max-height: $size-multi-bet;
+                z-index: 6;
 
-                    grid-row: #{$row + 1} / span 2;
-                    grid-column: #{($col - 1) * 5 + 6} / span 10;
-                }
+                grid-row: #{$row + 1} / span 2;
+                grid-column: #{($col - 1) * 5 + 6} / span 10;
             }
         }
     }
