--- a/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
@@ -5,25 +5,27 @@
     height: 10rem;
 
     animation: fadein 0.45s linear forwards;
-
-    &.disapear {
-        animation: fadeout 0.45s linear forwards;
-    }
 }
 
-.mobile-portrait {
-    &.container {
+.disapear {
+    animation: fadeout 0.45s linear forwards;
+}
+
+:global(.mobile-portrait) {
+    .container {
         left: 50%;
         bottom: calc(var(--height-footer) + 9.4rem);
         translate: -50% 0;
     }
 }
 
-.desktop,
-.mobile-landscape {
-    left: 50%;
-    top: 50%;
-    translate: -50% -50%;
+:global(.desktop),
+:global(.mobile-landscape) {
+    .container {
+        left: 50%;
+        top: 50%;
+        translate: -50% -50%;
+    }
 }
 
 @keyframes fadein {
