--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -60,8 +60,8 @@
     }
 }
 
-.mobile-portrait {
-    &.button-action {
+:global(.mobile-portrait) {
+    .button-action {
         &.disapear {
             --opacity: 0.2;
         }
@@ -72,9 +72,9 @@
     }
 }
 
-.desktop,
-.mobile-landscape {
-    &.button-action {
+:global(.desktop),
+:global(.mobile-landscape) {
+    .button-action {
         &.disapear {
             --opacity: 0;
         }
