--- a/src/common/components/Game/styles.module.scss
+++ b/src/common/components/Game/styles.module.scss
@@ -1,6 +1,6 @@
-.mobile-portrait,
-.mobile-landscape {
-    &.game-area {
+:global(.mobile-portrait),
+:global(.mobile-landscape) {
+    .game-area {
         position: relative;
         width: 100%;
         height: 100%;
@@ -17,8 +17,8 @@
     }
 }
 
-.desktop {
-    &.game-area {
+:global(.desktop) {
+    .game-area {
         position: absolute;
         top: 50%;
         left: 50%;
