--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -12,8 +12,8 @@
     flex-shrink: 0;
 }
 
-.mobile-portrait {
-    &.main-area {
+:global(.mobile-portrait) {
+    .main-area {
         width: 100%;
         height: 100%;
 
@@ -27,9 +27,9 @@
     }
 }
 
-.desktop,
-.mobile-landscape {
-    &.main-area {
+:global(.desktop),
+:global(.mobile-landscape) {
+    .main-area {
         padding-bottom: 0.9rem;
 
         flex-direction: column-reverse;
