--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,6 +10,8 @@
     --width-overlay-streaming-landscape: 12rem;
     --height-overlay-streaming-landscape: 11rem;
 
+    --streaming-background: #1c1303;
+
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
     // portrait, blur di bawah streaming 1
