fix bug overlay streaming

--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -86,12 +86,12 @@
         }
 
         &::before {
-            left: 0;
+            left: -0.1rem;
             background: var(--streaming-color-4);
         }
 
         &::after {
-            right: 0;
+            right: -0.1rem;
             background: var(--streaming-color-5);
         }
     }
