--- a/src/common/components/MiniHowToPlay/Modal/Indicators/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/Indicators/styles.module.scss
@@ -23,11 +23,11 @@
     width: 0.6rem;
     height: 0.6rem;
     border-radius: 0.6rem;
-    background: rgba(255, 255, 255, 0.12);
-    transform: background 0.2s linear;
+    background-color: rgba(255, 255, 255, 0.12);
+    transition: background-color 0.4s linear;
 }
 
 .dot.active {
-    background: rgba(255, 255, 255, 1);
-    transform: background 0.2s linear;
+    background-color: rgba(255, 255, 255, 1);
+    transition: background-color 0.4s linear;
 }
