--- a/src/common/components/MiniHowToPlay/Slide/Content/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slide/Content/styles.module.scss
@@ -1,8 +1,8 @@
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+// .content {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
 
 .content p {
     font-size: 1.2rem;
