module mini how to play

--- a/src/common/components/MiniHowToPlay/Modal/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/styles.module.scss
@@ -28,6 +28,8 @@
 :global(.mobile-landscape) {
     .modal {
         --width-modal-mini-htp: 42rem;
+
+        height: calc(100% - 2rem);
     }
 }
 
