--- a/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
@@ -28,12 +28,13 @@
     height: 1.4rem;
 }
 
-.button span {
+.text {
     color: #00c3d8;
     text-align: center;
     font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: 0.012rem;
+    text-transform: capitalize;
 }
 
 @keyframes showAnimation {
