--- a/src/common/components/MiniHowToPlay/Modal/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/styles.module.scss
@@ -16,11 +16,15 @@
 
 .body {
     flex: 1;
+    overflow: hidden;
 }
 
 :global(.mobile-portrait) {
     .modal {
         --width-modal-mini-htp: 34rem;
+
+        height: 100%;
+        max-height: 50rem;
     }
 }
 
@@ -30,6 +34,7 @@
         --width-modal-mini-htp: 42rem;
 
         height: calc(100% - 2rem);
+        max-height: calc(100% - 2rem);
     }
 }
 
