--- a/src/common/components/MiniHowToPlay/Slide/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slide/styles.module.scss
@@ -14,6 +14,8 @@
 }
 
 .title {
+    flex: 0;
+
     h1 {
         text-align: center;
         font-size: 1.4rem;
@@ -24,19 +26,27 @@
     }
 }
 
+.graphic {
+    flex: 0;
+
+    margin-block: 0.5rem;
+}
+
 .content {
+    flex: 1;
+    overflow-y: auto;
     white-space: break-spaces;
 }
 
 :global(.mobile-portrait) {
     .graphic {
-        height: 18rem;
+        height: 17rem;
     }
 }
 
 :global(.desktop),
 :global(.mobile-landscape) {
     .graphic {
-        height: 9rem;
+        height: 8rem;
     }
 }
