--- a/src/common/components/MiniHowToPlay/Modal/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/styles.module.scss
@@ -23,8 +23,8 @@
     .modal {
         --width-modal-mini-htp: 34rem;
 
-        height: 100%;
-        max-height: 50rem;
+        // height: 100%;
+        // max-height: 50rem;
     }
 }
 
