--- a/src/common/components/MiniHowToPlay/Slide/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slide/styles.module.scss
@@ -14,7 +14,7 @@
 }
 
 .title {
-    flex: 0;
+    // flex: 0;
 
     h1 {
         text-align: center;
@@ -27,14 +27,14 @@
 }
 
 .graphic {
-    flex: 0;
+    // flex: 0;
 
     margin-block: 0.5rem;
 }
 
 .content {
-    flex: 1;
-    overflow-y: auto;
+    // flex: 1;
+    // overflow-y: auto;
     white-space: break-spaces;
 }
 
